k8s/otus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-service-deployment
spec:
  selector:
    matchLabels:
      app: otus
  replicas: 2
  template:
    metadata:
      labels:
        app: otus
    spec:
      containers:
        - name: otus
          image: nmiit/otus:1.0.1
          ports:
            - containerPort: 8000
