k8s/otus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
spec:
  selector:
    app: otus
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
